[gd_scene load_steps=3 format=2]

[ext_resource path="res://CombatScreen/CombatScreen.gd" type="Script" id=1]
[ext_resource path="res://_Resources/ZoneBackgrounds/Forest.png" type="Texture" id=2]

[node name="CombatScreen" type="Node2D"]
show_behind_parent = true
script = ExtResource( 1 )

[node name="Map" type="Node2D" parent="."]

[node name="Image1" type="Sprite" parent="Map"]
position = Vector2( -260, 0 )
z_index = -20
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1600, 3200 )

[node name="Image2" type="Sprite" parent="Map"]
position = Vector2( -260, -3200 )
z_index = -20
texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 1600, 3200 )
